--- a/src/pages/barn/barn.njk
+++ b/src/pages/barn/barn.njk
@@ -9,7 +9,7 @@ published: "Oppdatert 13. februar 2024"
 alpine: true
 permalink: 'situasjon/barn/index.html'
 description: ''
+layout: 'article-page.njk'
 ---
 
-{%- extends 'article-page.njk' -%}
 
