--- a/src/pages/klagerettigheter/klagerettigheter.njk
+++ b/src/pages/klagerettigheter/klagerettigheter.njk
@@ -10,7 +10,7 @@ alpine: true
 description: ''
 order: 3
 permalink: 'slik-gjor-du-det/klagerettigheter/index.html'
+layout: 'article-page.njk'
 ---
 
-{%- extends 'article-page.njk' -%}
 
