--- a/src/pages/sykepenger/sykepenger.njk
+++ b/src/pages/sykepenger/sykepenger.njk
@@ -15,6 +15,5 @@ published: "Oppdatert 23. april 2024"
 alpine: true
 order: 2
 permalink: 'produkt/sykepenger/index.html'
+layout: 'article-page.njk'
 ---
-
-{%- extends 'article-page.njk' -%}
