--- a/src/_includes/partials/kontakt.njk
+++ b/src/_includes/partials/kontakt.njk
@@ -1,5 +1,5 @@
-<aside class="grid pt-16 pb-16 grid-cols-combi wave -mt-2 {{ 'bg-white' if contactTheme === "white" else 'bg-slate-100' }}">
-  <h2 class="text-fluid-24-28 font-semibold col-container">Kontakt oss</h2>
+<aside class="grid pt-16 pb-16 grid-cols-combi wave -mt-2 {{ 'bg-white' if contactTheme === "white" else 'bg-slate-100' }}" x-intersect:enter="floatingTocOpen = false">
+  <h2 class="font-semibold text-fluid-24-28 col-container">Kontakt oss</h2>
   <div class="grid gap-8 mt-4 {{ 'md:grid-cols-3' if contact.length === 3 }} md:gap-x-12 col-container"> 
     {% for item in contact %}
     <div class="flex items-baseline gap-2.5">
@@ -7,7 +7,7 @@
         {{ item.icon | svgContents('w-7 h-7 shrink-0 items-baseline') | safe if item.icon }}
       </div>
       <div>
-        <h3 class="text-fluid-20-22 font-semibold">
+        <h3 class="font-semibold text-fluid-20-22">
           <a class="text-blue-600 underline hover:decoration-2" href="javascript:void(0);">
             {{ item.title | markdown | safe }}
           </a>
@@ -20,7 +20,7 @@
           {% for option in item.options %}         
             <p class="grid gap-1 {{ 'mt-2' if loop.last }}">
               {% if option.name %}
-              <strong class="text-fluid-14-16 font-semibold tracking-wider uppercase">{{ option.name | safe }}:</strong>
+              <strong class="font-semibold tracking-wider uppercase text-fluid-14-16">{{ option.name | safe }}:</strong>
               {% endif %}
               <span class="flex items-baseline gap-x-1">
                 <svg class="inline-block translate-y-1 -ml-0.5 {{ 'text-green-400' if (option.isOpen === true) else 'text-slate-500' }}" width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
