--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -28,7 +28,7 @@
 
     </div>
 
-    <div class="flex flex-col justify-between mt-16 text-fluid-16-18 border-t sm:flex-row-reverse border-white/10">
+    <div class="flex flex-col justify-between mt-16 border-t text-fluid-16-18 sm:flex-row-reverse border-white/10">
       <div class="flex flex-col justify-between gap-3 mt-4 sm:gap-6 sm:flex-row sm:self-end">
         {%- for link in footer.legal -%}
           <a class="underline underline-offset-3 decoration-blue-300/70 pointer-fine:hover:decoration-2 pointer-fine:hover:text-orange-200" href="#">{{ link.text }}</a>
