--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -68,8 +68,8 @@
 <button 
   class="fixed inset-0 z-40 w-full h-full cursor-default bg-deepblue-900/50 backdrop-blur-sm" 
   type="button"
-  x-show="(menuOpen || myPageOpen || loginOpen)" 
-  x-on:click="menuOpen = false, myPageOpen = false, loginOpen = false" 
+  x-show="(menuOpen || myPageOpen || loginOpen || floatingTocOpen)" 
+  x-on:click="menuOpen = false, myPageOpen = false, loginOpen = false, floatingTocOpen = false" 
   x-on:keyup.escape.window="menuOpen = false, myPageOpen = false,  loginOpen = false"
   x-transition:enter="transition ease-out duration-75"
   x-transition:enter-start="opacity-0"
