--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -27,7 +27,7 @@
     {%- block script -%}{%- endblock -%}
   </head>
   <body
-    id="toppen" class="min-h-full text-fluid-18-20 leading-relaxed overflow-x-hidden overflow-y-scroll {{ bodyClass }}" x-data="{ indexOpen: false, audienceDropdownOpen: false, languageDropdownOpen: false, loggedIn: true, loginOpen: false, menuOpen: false, myPageOpen: false, newNotifications: true, overlayOpen: false, floatingToc: false, floatingTocOpen: false }">
+    id="toppen" class="min-h-full text-fluid-18-20 leading-relaxed overflow-x-hidden overflow-y-scroll {{ bodyClass }}" x-data="{ indexOpen: false, audienceDropdownOpen: false, languageDropdownOpen: false, loggedIn: false, loginOpen: false, menuOpen: false, myPageOpen: false, newNotifications: true, overlayOpen: false, floatingToc: false, floatingTocOpen: false }">
 
     {%- if environment === 'production' -%}
     {# {%- include "partials/banner.njk" -%} #}
