--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,11 +1,10 @@
 {%- set audience = audienceOverride or menu.audience -%}
 
-<header class="relative z-50 bg-white">
-  <div class="text-center text-fluid-16-18 bg-slate-100 sm:hidden px-edge">
-    <button class="py-1 tracking-widest uppercase cursor-default" x-on:click="menuOpen = !menuOpen, myPageOpen = false, loginOpen = false" type="button">{{ activeRole }}</button>
-  </div>
+{%- set menuButtonClasses = "flex flex-col xs:flex-row items-center justify-center pl-2 pr-3 leading-none cursor-pointer font-semibold gap-1 text-blue-600 rounded min-w-16 py-2 text-fluid-16-18 xs:text-fluid-18-20 pointer-fine:hover:bg-blue-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 group peer" -%}
 
-  <nav class="z-10 grid grid-cols-article">
+<header class="relative z-50 bg-white">
+  <div class="z-10 grid grid-cols-article">
+
     <div class="grid grid-cols-[auto_1fr] sm:grid-cols-[auto_auto_1fr] col-container">
 
       <div class="flex items-center sm:col-span-2">
@@ -18,36 +17,26 @@
         </div>
 
         {# Separator #}
-        <div class="hidden w-px h-8 mx-2 origin-center translate-x-px sm:block bg-slate-300"></div>
+        <div class="w-px h-8 mx-2 origin-center bg-slate-300"></div>
 
         {# Audience #}
-        <div class="self-center hidden pl-3 leading-tight text-fluid-20-22 sm:block">
+        <div class="self-center pl-3 leading-tight text-fluid-20-22">
           <button class="cursor-default" x-on:click="menuOpen = !menuOpen, myPageOpen = false, loginOpen = false" type="button">
             {{ activeRole }}
           </button>
         </div>
       </div>
 
-
       {# Menu Buttons #}
-      {%- set menuButtonClasses = "flex flex-col xs:flex-row items-center justify-center pl-2 pr-3 leading-none cursor-pointer font-semibold gap-1 text-blue-600 rounded min-w-16 py-2 text-fluid-16-18 xs:text-fluid-18-20 pointer-fine:hover:bg-blue-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 group peer" -%}
 
       <div class="flex self-center py-2 -mr-1 sm:gap-2 justify-self-end">
-        <button class="{{ menuButtonClasses }}" type="button" x-show="!loggedIn" x-on:click="loginOpen = !loginOpen, menuOpen = false, myPageOpen = false" x-bind:aria-expanded="loginOpen">
-            {{ '/src/_includes/svg/icons/login.svg' | svgContents('w-6 h-6 sm:w-7 sm:h-7 shrink-0 pointer-events-none') | safe }}
-          <span class="mt-px">Logg inn</span>
-        </button>
-
-        <button class="{{ menuButtonClasses }}" type="button" x-on:click="myPageOpen = !myPageOpen, menuOpen = false, loginOpen = false" x-bind:class="myPageOpen && 'bg-slate-200'" x-show="loggedIn" x-bind:aria-expanded="myPageOpen">
-          <span class="relative">
-            {{ '/src/_includes/svg/icons/person-circle.svg' | svgContents('w-6 h-6 sm:w-7 sm:h-7 -ml-0.5 shrink-0 pointer-events-none') | safe }}
-            <span x-show="newNotifications" class="absolute right-0 block w-1.5 h-1.5 sm:w-2 sm:h-2 bg-red-400 rounded-full top-0.5" x-bind:class="myPageOpen ? 'ring-2 ring-slate-200' : 'ring-2 ring-white pointer-fine:group-hover:ring-slate-200'"></span>
-          </span>
-          <span class="mt-px sm:hidden">Min side</span>
-          <span class="hidden mt-px sm:inline-block">Isac Norland</span>
-        </button>
-
-        <button class="{{ menuButtonClasses }} ml-1 order-2" type="button" x-on:click="menuOpen = !menuOpen, myPageOpen = false, loginOpen = false" x-bind:class="menuOpen && 'bg-blue-50'" x-bind:aria-expanded="menuOpen">
+        <button 
+          class="{{ menuButtonClasses }} ml-1 order-2" 
+          type="button" 
+          x-on:click="menuOpen = !menuOpen, myPageOpen = false, loginOpen = false"
+          x-bind:class="menuOpen && 'bg-blue-50'" 
+          x-bind:aria-expanded="menuOpen"
+        >
           <template x-if="!menuOpen">
             {{ '/src/_includes/svg/icons/menusearch.svg' | svgContents('w-6 h-6 sm:w-7 sm:h-7 shrink-0 pointer-events-none') | safe }}
           </template>
@@ -56,12 +45,38 @@
           </template>
           <span class="mt-px">Meny og søk</span>
         </button>
-
+      </div>
     </div>
-  </nav>
+  </div>
+
+
   {%- include "partials/navigation.njk" -%}
+
+  <div class="grid justify-center py-1 bg-blue-100 min-h-8 grid-cols-page">
+    <a 
+      class="inline-flex items-center gap-2 px-3 py-1 text-blue-600" 
+      href="/min-side" 
+      x-bind:class="myPageOpen && 'bg-slate-200'" 
+      x-show="loggedIn" 
+      x-bind:aria-expanded="myPageOpen"
+    >
+      {{ '/src/_includes/svg/icons/person-circle.svg' | svgContents('w-6 h-6 sm:w-7 sm:h-7 -ml-0.5 shrink-0 pointer-events-none') | safe }}
+      <span class="mt-px sm:hidden">Min side</span>
+      <span class="hidden mt-px sm:inline-block">Isac Norland</span>
+    </a>
+    <button 
+      class="inline-flex items-center gap-2 px-3 py-1 text-blue-600" 
+      type="button" 
+      x-show="!loggedIn" 
+      x-on:click="loginOpen = !loginOpen, menuOpen = false, myPageOpen = false" 
+      x-bind:aria-expanded="loginOpen"
+    >
+            {{ '/src/_includes/svg/icons/login.svg' | svgContents('w-6 h-6 sm:w-7 sm:h-7 shrink-0 pointer-events-none') | safe }}
+          <span class="mt-px">Logg inn (Krever Bank-ID eller …)</span>
+        </button>
+  </div>
+
   {%- include "partials/login.njk" -%}
-  {%- include "partials/minSide.njk" -%}
 </header>
 
 {# Overlay #}
